# politiscales-ai

./: .env.example  .gitignore  .gitmodules  README.md  compare_incognito.sh  package-lock.json  package.json  pipeline_graph.md  pyproject.toml  requirements.txt  run_all.sh
results/json/: 2026-04-18_09-37-38_openai-gpt-4.1_en_sequential_t0_70.json  2026-04-18_10-09-00_x-ai-grok-3-mini_en_sequential_t0_70.json  2026-04-18_11-10-27_openai-gpt-4o_en_no_history_t0_70.json  2026-04-18_11-11-06_x-ai-grok-3_en_no_history_t0_70.json  2026-04-18_11-11-57_anthropic-claude-sonnet-4_en_no_history_t0_70.json  2026-04-18_11-18-53_anthropic-claude-sonnet-4_en_no_history_t0_70.json  2026-04-18_11-18-53_deepseek-deepseek-chat-v3-0324_en_no_history_t0_70.json  2026-04-18_11-18-53_openai-gpt-4o_en_no_history_t0_70.json  2026-04-18_11-18-53_x-ai-grok-3_en_no_history_t0_70.json  2026-04-18_11-28-33_openai-gpt-4o_en_no_history_t0_70.json  2026-04-18_11-28-33_x-ai-grok-3_en_no_history_t0_70.json  2026-04-18_11-28-59_openai-gpt-4o_en_no_history_t0_70.json  2026-04-18_11-28-59_x-ai-grok-3_en_no_history_t0_70.json
results/language-influence/json/: 2026-04-18_12-44-24_openai-gpt-4.1_en_no_history_t0_00.json  (+6 more)
runner/: __init__.py  __main__.py  badges.py  client.py  comparison.py  config.py  display.py  display_main.py  output.py  questions.py  regenerate_pngs.py  scorer.py  types.py
runner/data/: axes_meta.json  prompts.json  weights.json
runner/modes/: __init__.py  batch.py  no_history.py  sequential.py
scratch/: verify_agg.py  verify_prompts.py  verify_scorer.py
(+3 files in other folders)
